# nomoto

./: CMakeLists.txt  configuration.yaml  main.cpp  nomoto_model.cpp  nomoto_model.hpp  readme.md
config/: nomoto_config.yaml
include/: nomoto_obs.hpp  nomoto_ode.hpp  nomoto_sim.hpp
src/: main.cpp  nomoto_sim.cpp
test/: CMakeLists.txt  test.cpp  test_config.yaml
